--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>JS Learning</title>
+    <link rel="stylesheet" href="./App.css">
 </head>
 <body>
     <div id="root">
-        
+        <h1>Hekko</h1>
     </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js">
+    <script type="module" src="./App.js">
 
     </script>
 </body>
